home_page_slider_update

--- a/index.html
+++ b/index.html
@@ -1139,9 +1139,38 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
 
-                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">Presentation Templates
+                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">Motion Background
                       <br/>
                       Advertising Design
+                    </div>
+
+                                        <!-- LAYER NR. 4 -->
+                    <div class="tp-caption   tp-resizeme"
+                         id="slide-411-layer-2"
+                         data-x="['left','left','center','center']" data-hoffset="['0','50','0','0']"
+                         data-y="['top','top','top','top']" data-voffset="['0','430','460','290']"
+                         data-fontsize="['40','30','40','25']"
+                         data-lineheight="['50','40','50','30']"
+                         data-width="['640','360','100%','100%']"
+                         data-height="none"
+                         data-whitespace="normal"
+
+                         data-type="text"
+                         data-basealign="slide"
+                         data-responsive_offset="on"
+
+                         data-frames='[{"delay":"+490","speed":2000,"frame":"0","from":"y:50px;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
+                         data-margintop="[0,0,0,0]"
+                         data-marginright="[0,0,0,0]"
+                         data-marginbottom="[40,30,20,20]"
+                         data-marginleft="[0,0,0,0]"
+                         data-textAlign="['inherit','inherit','center','center']"
+                         data-paddingtop="[0,0,0,0]"
+                         data-paddingright="[0,0,0,0]"
+                         data-paddingbottom="[0,0,0,0]"
+                         data-paddingleft="[0,0,0,0]"
+
+                         style="z-index: 12; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Browse Animation Stock Footage From Pond5 
                     </div>
 
                     <!-- LAYER NR. 13 -->
@@ -1383,7 +1412,7 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
 
-                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">Get started
+                         style="z-index: 7; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Quicksand;">Browse Shutterstock
                       <br/>
                       -
                     </div>
@@ -1414,12 +1443,12 @@
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
 
-                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Browse Pond5 video library
+                         style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 40px; line-height: 50px; font-weight: 300; color: rgba(255, 255, 255, 1.00); display: block;font-family:Quicksand;">Browse Shutterstock video library
                     </div>
 
                     <!-- LAYER NR. 23 -->
                     <a class="tp-caption rev-btn  tp-resizeme"
-                       href="https://www.freepik.com/author/pixellvector" target="_blank" id="slide-413-layer-13"
+                       href="www.shutterstock.com/g/SPurnoAnimation/video" target="_blank" id="slide-413-layer-13"
                        data-x="['left','left','center','center']" data-hoffset="['0','50','0','0']"
                        data-y="['top','top','top','top']" data-voffset="['0','540','590','400']"
                        data-width="none"
@@ -1731,7 +1760,7 @@
 
                  style="z-index: 23; min-width: 260px; max-width: 260px; white-space: nowrap; font-size: 15px; line-height: 15px; font-weight: 500; color: rgba(255, 255, 255, 1.00);font-family:Quicksand;">3
               <div class="blurslider-line" style="display:inline-block;width:40px;height:1px;background:#fff;margin: 10px 20px 4px 15px;"></div>
-              Freepik Profile
+              Shutterstock
             </div>
 
             <!-- LAYER NR. 35 -->
