--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@
 
                     <!-- LAYER NR. 23 -->
                     <a class="tp-caption rev-btn  tp-resizeme"
-                       href="www.shutterstock.com/g/SPurnoAnimation/video" target="_blank" id="slide-413-layer-13"
+                       href="https://shutterstock.com/g/SPurnoAnimation/video" target="_blank" id="slide-413-layer-13"
                        data-x="['left','left','center','center']" data-hoffset="['0','50','0','0']"
                        data-y="['top','top','top','top']" data-voffset="['0','540','590','400']"
                        data-width="none"
