many_files_updated_nav_about_lot

--- a/infographics.html
+++ b/infographics.html
@@ -65,20 +65,7 @@
     <!-- CSS Customization -->
     <link rel="stylesheet" href="blog/assets/css/custom.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756742830355549" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        window.tdlcAsyncInit = function() {
-                TDLinkConverter.init({});
-            };
-            var tdlc_1d43f5s_a = new Date(); tdlc_1d43f5s_a.setMinutes(0); tdlc_1d43f5s_a.setSeconds(0);
-            var tdlc_1d43f5s_seconds = parseInt(tdlc_1d43f5s_a.getTime() / 1000);
-            (function(d, s, id){
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) { return; }
-                js = d.createElement(s); js.id = id;
-                js.src = "https://clk.tradedoubler.com/lc?a(3384318)rand(" + tdlc_1d43f5s_seconds + ")";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, "script", "tdlc-jssdk"));
-      </script>
+ 
   </head>
 
   <body>
@@ -464,85 +451,7 @@
                   </li>
                   <!-- End Mega Menu Item -->
 
-                  <!-- Mega Menu Item -->
-                  <li class="hs-has-mega-menu nav-item g-mx-10--lg g-mx-20--xl"
-                      data-animation-in="fadeIn"
-                      data-animation-out="fadeOut"
-                      data-position="right">
-                    <a id="mega-menu-label-4" class="nav-link text-uppercase g-px-0" href="#" aria-haspopup="true" aria-expanded="false">Hi-Tech
-                      <i class="hs-icon hs-icon-arrow-bottom g-font-size-11 g-ml-5"></i></a>
-
-                    <!-- Mega Menu -->
-                    <div class="hs-mega-menu u-shadow-v11 g-text-transform-none g-font-weight-400 g-brd-top g-brd-primary g-brd-top-2 g-bg-white g-left-15 g-right-15 g-pa-30 g-mt-17 g-mt-7--lg--scrolling" aria-labelledby="mega-menu-label-4">
-                      <div class="row">
-                        <div class="col-lg-4">
-                          <article class="u-block-hover">
-                            <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid u-block-hover__main--zoom-v1" src="images/holographics.jpg" alt="SPurno Animation Studio">
-                            </figure>
-                            <span class="g-pos-abs g-top-20 g-left-20">
-                            <a class="btn btn-sm u-btn-red rounded-0" href="https://stock.adobe.com/stock-photo/id/775576930">Hologrphic Animation</a>
-                          </span>
-                            <span class="u-icon-v3 u-icon-size--sm g-bg-white g-color-black g-rounded-50x g-cursor-pointer g-pos-abs g-top-20 g-right-20">
-                            <i class="icon-camera"></i>
-                          </span>
-                            <header class="g-pos-abs g-bottom-10 g-left-20 g-right-20">
-                              <small class="g-color-white">
-                                <i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> Jan 26, 2024
-                              </small>
-                              <h3 class="h4 g-font-weight-600 g-mt-5">
-                                <a class="g-color-white g-color-white--hover" href="https://stock.adobe.com/stock-photo/id/775576930">Update your Videography / Background Animation </a>
-                              </h3>
-                            </header>
-                          </article>
-                        </div>
-                        <div class="col-lg-4">
-                          <article class="u-block-hover">
-                            <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid u-block-hover__main--zoom-v1" src="images/map-holographics.jpg" alt="SPurno Animation Studio">
-                            </figure>
-                            <span class="g-pos-abs g-top-20 g-left-20">
-                            <a class="btn btn-sm u-btn-red rounded-0" href="#">Alpha Channel</a>
-                          </span>
-                            <span class="u-icon-v3 u-icon-size--sm g-bg-white g-color-black g-rounded-50x g-cursor-pointer g-pos-abs g-top-20 g-right-20">
-                            <i class="icon-camera"></i>
-                          </span>
-                            <header class="g-pos-abs g-bottom-10 g-left-20 g-right-20">
-                              <small class="g-color-white">
-                                <i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> Jan 15, 2024
-                              </small>
-                              <h3 class="h4 g-font-weight-600 g-mt-5">
-                                <a class="g-color-white g-color-white--hover" href="https://stock.adobe.com/stock-photo/id/806065065">Alpha Channel Animated Screen</a>
-                              </h3>
-                            </header>
-                          </article>
-                        </div>
-                        <div class="col-lg-4">
-                          <article class="u-block-hover">
-                            <figure class="g-bg-cover g-bg-black-gradient-opacity-v1--after">
-                              <img class="img-fluid u-block-hover__main--zoom-v1" src="images/green-screen-template.jpg" alt="SPurno Animation Studio">
-                            </figure>
-                            <span class="g-pos-abs g-top-20 g-left-20">
-                            <a class="btn btn-sm u-btn-red rounded-0" href="https://stock.adobe.com/stock-photo/id/895607925">Green Screen Videos</a>
-                          </span>
-                            <span class="u-icon-v3 u-icon-size--sm g-bg-white g-color-black g-rounded-50x g-cursor-pointer g-pos-abs g-top-20 g-right-20">
-                            <i class="icon-camera g-left-2"></i>
-                          </span>
-                            <header class="g-pos-abs g-bottom-10 g-left-20 g-right-20">
-                              <small class="g-color-white">
-                                <i class="icon-clock g-pos-rel g-top-1 g-mr-2"></i> Jan 8, 2024
-                              </small>
-                              <h3 class="h4 g-font-weight-600 g-mt-5">
-                                <a class="g-color-white g-color-white--hover" href="https://stock.adobe.com/stock-photo/id/895607925">Large Scale 4K Green Screen Animation Videos</a>
-                              </h3>
-                            </header>
-                          </article>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- End Mega Menu -->
-                  </li>
-                  <!-- End Mega Menu Item -->
+ 
 
                   <!-- Mega Menu Item -->
                   <li class="hs-has-mega-menu nav-item g-mx-10--lg g-mx-20--xl"
@@ -800,6 +709,12 @@
                   <li class="nav-item g-mx-10--lg g-mx-20--xl">
                     <a id="nav-link--pages" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="contact-us.html">
                       Contact Us
+                    </a>
+                  </li>
+
+                  <li class="nav-item g-mx-10--lg g-mx-20--xl">
+                    <a id="nav-link--pages" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="about-us.html">
+                      About Us
                     </a>
                   </li>
                   <!-- End Main -->
