--- a/news-background-animation.html
+++ b/news-background-animation.html
@@ -796,6 +796,12 @@
                       Contact Us
                     </a>
                   </li>
+
+                  <li class="nav-item g-mx-10--lg g-mx-20--xl">
+                    <a id="nav-link--pages" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="about-us.html">
+                      About Us
+                    </a>
+                  </li>
                   <!-- End Main -->
                 </ul>
               </div>
